packages/webassemblyjs/test/fixtures/type-errors/load8_u/module.wast
(module (memory 1) (func (result i32) (i32.load8_u (f32.const 0))))
